fix w migracjach + 008-insert-data-to-author.yaml

--- a/src/main/resources/database/002-create-book-category.yaml
+++ b/src/main/resources/database/002-create-book-category.yaml
@@ -11,6 +11,7 @@ databaseChangeLog:
                   name: category_id
                   type: int
                   constraints:
+                    primaryKey: true
                     nullable: false
                     generatedByDefault: true
               - column:
