002-create-book-category.yaml 13 line added autoIncrement: true

--- a/src/main/resources/database/002-create-book-category.yaml
+++ b/src/main/resources/database/002-create-book-category.yaml
@@ -10,6 +10,7 @@ databaseChangeLog:
               - column:
                   name: category_id
                   type: int
+                  autoIncrement: true
                   constraints:
                     primaryKey: true
                     nullable: false
