--- a/system/pom.xml
+++ b/system/pom.xml
@@ -17,4 +17,17 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <dependencies>
+    <dependency>
+      <groupId>pl.sensilabs</groupId>
+      <artifactId>order-rest-module</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>pl.sensilabs</groupId>
+      <artifactId>order-domain-module</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+  </dependencies>
+
 </project>
