Moved Jpa Repositories to commons/commons-infrastructure module to avoid code duplication.

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
   <modules>
     <module>system</module>
     <module>modules</module>
+    <module>commons</module>
   </modules>
 
   <properties>
