Moved system module into new applications maven module and updated their poms to point at proper parent modules.

--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
   <description>Praktyki</description>
 
   <modules>
-    <module>system</module>
     <module>modules</module>
     <module>commons</module>
+    <module>applications</module>
   </modules>
 
   <properties>
