--- a/applications/system/pom.xml
+++ b/applications/system/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>pl.sensilabs</groupId>
-    <artifactId>Praktyki</artifactId>
+    <artifactId>applications</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
 
