Implemented UserAccount and JWT with Spring Security.

--- a/applications/system/pom.xml
+++ b/applications/system/pom.xml
@@ -28,6 +28,11 @@
       <artifactId>order-domain-module</artifactId>
       <version>0.0.1-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>pl.sensilabs</groupId>
+      <artifactId>configuration</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
 </project>
