--- a/configuration/pom.xml
+++ b/configuration/pom.xml
@@ -5,15 +5,16 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>pl.sensilabs</groupId>
-    <artifactId>commons</artifactId>
+    <artifactId>Praktyki</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
 
-  <artifactId>commons-infrastructure</artifactId>
+  <artifactId>configuration</artifactId>
 
   <properties>
     <maven.compiler.source>23</maven.compiler.source>
     <maven.compiler.target>23</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+
 </project>
